--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,18 +1,22 @@
 default_language_version:
-    python: python3.8
+  python: python3.8
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.3.0
     hooks:
-    -   id: check-yaml
-    -   id: end-of-file-fixer
-    -   id: trailing-whitespace
-    -   id: check-docstring-first
--   repo: https://github.com/psf/black
+      - id: check-yaml
+      - id: end-of-file-fixer
+      - id: trailing-whitespace
+      - id: check-docstring-first
+  - repo: https://github.com/psf/black
     rev: 21.12b0
     hooks:
-    -   id: black
--   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: 'v0.931'
+      - id: black
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: "v0.931"
     hooks:
-    -   id: mypy
+      - id: mypy
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: "v2.5.1"
+    hooks:
+      - id: prettier
