--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-rich == "==12.4.4"
+rich = "==12.4.4"
 
 [dev-packages]
 pre-commit = "==2.19.0"
 
 [requires]
-python_version = "3.10"
+python_version = "3.9.6"
